---
sidebar: sidebar 
permalink: release-notes/whats-new-9161.html 
keywords: 'what"s new, release notes, 9.16.1, asa r2, asa a1k, asa a90, asa a70' 
summary: Saiba mais sobre os novos recursos disponíveis no ONTAP 9.16,1 para sistemas ASA R2. 
---
= Novidades do ONTAP 9.16,1 para sistemas ASA R2
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ../media/


[role="lead"]
Saiba mais sobre os novos recursos disponíveis no ONTAP 9.16,1 para sistemas ASA R2.



== Proteção de dados

[cols="2,4"]
|===
| Atualização | Descrição 


| link:../data-protection/manage-consistency-groups.html["Suporte para grupos hierárquicos de consistência"] | Os grupos hierárquicos de consistência permitem criar um grupo de consistência pai que contém vários grupos filhos de consistência. Isso simplifica a proteção e o gerenciamento de dados para estruturas de dados complexas. 
|===


== Eficiência de storage

[cols="2,4"]
|===
| Atualização | Descrição 


| Suporte para rebalanceamento automático de unidades de armazenamento | O ONTAP reequilibrará automaticamente as unidades de storage nas zonas de disponibilidade de storage para obter performance e utilização de capacidade ideais. 


| Alocação de espaço NVMe habilitada por padrão  a| 
A alocação de espaço (também chamada de "perfuração" e "desmapear") é habilitada para namespaces NVMe por padrão. A desalocação de espaço permite que um host inutilize blocos de nomes para recuperar espaço.

Isso melhora muito a eficiência geral do storage, especialmente com sistemas de arquivos que têm alta rotatividade de dados.

|===